--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,26 @@
-body{
-    background-color: red;
+.meta-box-container{
+    padding: 20px;
+
 }
+
+.meta-row{
+    border-bottom: 1px solid #e9e9e9;
+    padding-bottom:  20px;
+    padding-top: 20px;
+    display: inline-block;
+    width: 100%;
+}
+.meta-th{
+    width: 25%;
+    float: left;
+    font-weight: bold;
+}
+.meta-td{
+    width: 75%;
+    float: left;
+}
+
+input, textarea{
+   max-width: 100%;
+}
+
