writing ajax for doctor appointement

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,21 +1,22 @@
-.meta-box-container{
+.Hospital-meta-box-container{
     padding: 20px;
 
 }
 
-.meta-row{
+.Hospital-meta-row{
     border-bottom: 1px solid #e9e9e9;
     padding-bottom:  20px;
     padding-top: 20px;
     display: inline-block;
     width: 100%;
 }
-.meta-th{
+.Hospital-meta-th{
     width: 25%;
     float: left;
     font-weight: bold;
+ 
 }
-.meta-td{
+.Hospital-meta-td{
     width: 75%;
     float: left;
 }
